--- a/application-smart-vocab/package.json
+++ b/application-smart-vocab/package.json
@@ -6,7 +6,11 @@
     "node": "v18.19.1"
   },
   "dependencies": {
+    "prompt-sync": "^4.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/prompt-sync": "^4.2.3"
   }
 }
