--- a/application-smart-vocab/package.json
+++ b/application-smart-vocab/package.json
@@ -6,7 +6,9 @@
     "node": "v18.19.1"
   },
   "dependencies": {
+    "@cbto/nodepackages.utils": "^1.0.4",
     "inquirer": "^12.4.1",
+    "openai": "^4.83.0",
     "prompt-sync": "^4.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
