--- a/portfolio-primus/package.json
+++ b/portfolio-primus/package.json
@@ -4,14 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev:fe": "vite",
+    "dev": "npm run build && netlify dev",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@netlify/functions": "^3.0.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3"
