--- a/portfolio-primus/tsconfig.json
+++ b/portfolio-primus/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "files": [],
+  "compilerOptions": {
+    "allowJs": true,
+    "noImplicitAny": false
+  },
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
