--- a/portfolio-primus/package.json
+++ b/portfolio-primus/package.json
@@ -18,7 +18,8 @@
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
